[tool.poetry]
name = "robotpy-toolkit-7407"
version = "2023.1.6.0"
description = "FRC Wired Boars Team 7407's Toolkit for usage with RobotPy"
authors = ["Sidharth Rao <sidharthmrao@gmail.com>", "Ethan Chapman <ethan.chapman0@outlook.com>"]

[tool.poetry.dependencies]
python=">3.9,<3.12"
robotpy-rev = "^2023.1.1"
robotpy-ctre = "^2023.0.0"
robotpy-photonvision = "^2023.1.2"
robotpy-apriltag = "^2023.1.1.0"
robotpy = {extras = ["commands2"], version = "^2023.1.1"}
pynetworktables = "^2021.0.0"
m2r2 = "^0.3.3"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Mypy config docs
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml

# Ignore fixing unum for now since we don't use it
[[tool.mypy.overrides]]
module = "robotpy_toolkit_7407.unum.*"
ignore_errors = true